--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "goit-react-hw-06-",
+  "name": "goit-react-hw-07",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,25 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.12",
-    "@reduxjs/toolkit": "^2.2.1",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
+    "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "formik": "^2.4.5",
-    "nanoid": "^5.0.6",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.1.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.4"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "vite": "^5.2.0"
   }
 }
